# Yueling

./: .gitignore  LICENSE  README.md  build  build.bat
.github/workflows/: build.yml
.trae/documents/: plan_20260114_064520.md  plan_20260114_094501.md  优化前端UI计划.md  修复界面不显示问题.md  实现上传头像功能.md
Yueling/: package-lock.json  package.json
Yueling/src/: App.vue  index.html  main.js  styles.css
Yueling/src-tauri/: 2  Cargo.toml  tauri.conf.json
Yueling/src-tauri/src/: lib.rs  main.rs
Yueling/src/services/: api.ts  auth.ts  friend.ts
server/: Cargo.toml  Cargo.toml.bak  ENCRYPTION_GUIDE.md  server.db
server/src/: error.rs  lib.rs  main.rs
server/src/api/: auth.rs  friend.rs  message.rs  mod.rs  mod.rs.bak  user.rs  ws.rs
server/src/config/: mod.rs
server/src/core/: auth.rs  mod.rs  models.js
server/src/storage/: mod.rs  user.js  user.rs
server/src/utils/: crypto_v2.rs  mod.rs
server/src/websocket/: client.rs  mod.rs  server.rs
