[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
dav-server = "0.8.0"
libp2p = "0.56.0"
quinn = "0.11.9"
rcgen = "0.13.0"
sqlite = "0.37.0"
uuid = { version = "1.19.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"
bcrypt = "0.17.1"
axum = "0.8.7"
