[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
dav-server = "0.8.0"
libp2p = "0.56.0"
quinn = "0.11.9"
rcgen = "0.13.0"
uuid = { version = "1.19.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"
bcrypt = "0.17.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = "1.0.228"
axum = { version = "0.8.7", features = ["ws"] }
tower-http = { version = "0.6.8", features = ["cors", "compression-gzip", "trace"] }
thiserror = "2.0.17"
serde_json = "1.0.145"
futures-util = "0.3.31"
tokio-tungstenite = "0.28.0"
